--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mbs",
+  "homepage": "https://mbsquared-dev.github.io/mbsquared",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -8,7 +9,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -47,6 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "esbuild": "^0.20.1",
     "framer-motion": "^12.5.0",
+    "gh-pages": "^6.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "nanoid": "^5.0.6",
