Update homepage URL in package.json and change Vite base path for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mbs",
-  "homepage": "https://mbsquared-dev.github.io/mbsquared",
+  "homepage": "https://mbsquared-dev.github.io",
   "private": true,
   "version": "0.0.1",
   "type": "module",
